Minor changes: fix bug for step-five__additional-info-header being collapsed on different devices, change the value on submit-button on StepTwo.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -630,8 +630,7 @@ html {
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
-    padding: 1.6rem 2rem;
-    margin-top: 2rem; }
+    padding: 1.6rem 2rem; }
 
   .reservation-form__submit-btn--no-margin {
     margin-top: 0; }
@@ -853,8 +852,13 @@ html {
   align-items: center;
   margin-bottom: 1rem; }
 
+.step-five__additional-info-header {
+  min-width: 10rem;
+  padding-right: 1rem; }
+
 .step-five__additional-info-input {
-  width: 150px; }
+  min-width: 10rem;
+  max-width: 15rem; }
 
 .step-five__step-five-footer {
   display: flex;
@@ -870,7 +874,7 @@ html {
     grid-column-gap: 1.5rem; }
 
   .step-five__additional-info {
-    grid-template-columns: 1fr 1.5fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 2.5rem; } }
 .reservation-form__step-six {
   display: flex;
