--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -48,8 +48,14 @@
     margin-bottom: 1rem;
 }
 
+.step-five__additional-info-header {
+    min-width: 10rem;
+    padding-right: 1rem;
+}
+
 .step-five__additional-info-input {
-    width: 150px;
+    min-width: 10rem;
+    max-width: 15rem;
 }
 
 .step-five__step-five-footer {
@@ -69,7 +75,7 @@
     }
 
     .step-five__additional-info {
-        grid-template-columns: 1fr 1.5fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 2.5rem;
     }
 }
