--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -88,7 +88,7 @@
 @media only screen and (min-width: 400px) {
     .reservation-form__submit-btn {
         padding: 1.6rem 2rem;
-        margin-top: 2rem;
+        // margin-top: 2rem;
     }
 
     .reservation-form__submit-btn--no-margin {
